--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.15.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "redux-thunk": "^3.1.0",
-    "react-native-screens": "3.31.1",
-    "react-native-safe-area-context": "4.10.1"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
